<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="status">status</string>
    <string name="welcomestr">Just a Tic Tac Toe</string>
    <string name="main_grid">Main Grid</string>
    <string name="c8">8</string>
    <string name="c6">6</string>
    <string name="c4">4</string>
    <string name="c3">3</string>
    <string name="c1">1</string>
    <string name="c2">2</string>
    <string name="c7">7</string>
    <string name="c5">5</string>
    <string name="c0">0</string>
    <string name="start">Please input 0</string>
</resources>